--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </tr>
       <tr>
         <td>Diabetes</td>
-        <td>1 Yeara</td>
+        <td>1 Year</td>
       </tr>
     </tbody>
   </table>
