--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
   <title>Lika's Personal Site</title>
 </head>
 
+<style>
+
+body{
+  background-color: #FFADAD;
+}
+
+hr{
+  width: 5%;
+  border-style: none;
+  border-top-style: dotted;
+  border-color: grey;
+  border-width: 5px;
+}
+
+</style>
+
+
+
+
 <body>
   <table cellspacing="30">
     <tr>
-      <td><img src="C:\Users\Melik\OneDrive\Desktop\Web Developement\HTML - Personal Site\Likas profile picture.png" alt="Likas profile picture"></td>
+      <td><img src="https://scontent-frx5-1.xx.fbcdn.net/v/t1.6435-1/s320x320/42221601_10212637952878871_8838921044514308096_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=7206a8&_nc_ohc=mUNHBBDl9j0AX9r2BOr&_nc_ht=scontent-frx5-1.xx&oh=1fb0eef20e543884b97cbb5d6b9ac7fa&oe=6193EAD8" alt="Likas profile picture"></td>
       <td>
         <h1>Melike Karatas</h1>
         <p><em>Medical Assistant</em></p>
